# kernel-debugger

./: README.md  pyproject.toml  requirements.txt
examples/: example_run.py
kernels/: CMakeLists.txt  gatemlp.cu  mha.cu
script/: pylint.sh
src/: __init__.py  analyzer.py  auto_debug.py  find_bug.py  modifier.py  runner.py  utils.py
src/kernels/: __init__.py
tests/: test_auto_debug.py  test_find_bug.py
