[tool.poetry]
name = "auto-debugger"
version = "0.1.0"
description = "A tool for automatically debugging code by locating errors and suggesting modifications."
authors = ["Shouyang Dong <shouyang.dong@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
torch = "^1.9.0"
ctypes = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"